--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ body {
 }
 
 .container {
-    width: 343px;
-    height: 611px;
+    width: 21.4375rem;
+    height: 38.1875rem;
     border-radius: 10px;
     background-color: #FFFFFF;
     overflow: hidden;
@@ -33,41 +33,41 @@ body {
 }
 
 .product-image-mobile {
-    width: 343px;
-    height: 248px;
+    width: 21.4375rem;
+    height: 15.5rem;
     border-radius: 10px 10px 0 0;
 }
 
 .product-image-desktop {
-    width: 300px;
-    height: 450px;
+    width: 18.75rem;
+    height: 28.125rem;
     border-radius: 10px 0 0 10px;
 }
 
 .description {
     display: flex;
     flex-direction: column;
-    margin: 0 24px;
+    margin: 0 1.5rem;
 }
 
 .header {
-    margin-bottom: 12px;
-    letter-spacing: 5px;
-    font-size: 12px;
+    margin-bottom: 0.75rem;
+    letter-spacing: 0.3125rem;
+    font-size: 0.75rem;
     color: #6C7289;
 }
 
 h1 {
-    font-size: 32px;
+    font-size: 2rem;
     color: #1C232B;
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
 }
 
 .product-description {
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
     padding: 2px;
-    font-size: 14px;
-    line-height: 23px;
+    font-size: 0.875rem;
+    line-height: 1.4375rem;
     color: #6C7289;
 }
 
@@ -75,17 +75,17 @@ h1 {
     display: flex;
     align-items: center;
     padding-left: 0.5px;
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
 }
 
 .product-price-discounted {
     color: #3D8168;
-    font-size: 32px;
-    margin-right: 19px;
+    font-size: 2rem;
+    margin-right: 1.1875rem;
 }
 
 .product-price-original {
-    font-size: 13px;
+    font-size: 0.8125rem;
     text-decoration: line-through;
     color: #6C7289;
 }
@@ -96,15 +96,15 @@ button {
     align-items: center;
     background: #3D8168;
     border-radius: 8px;
-    height: 48px;
-    width: 295px;
+    height: 3rem;
+    width: 18.4375rem;
     color: #FFFFFF;
     border: #3D8168;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .button-logo {
-    margin-right: 11.61px;
+    margin-right: 0.7256rem;
 }
 
 button:hover {
@@ -123,8 +123,8 @@ button:hover {
 @media screen and (min-width: 700px) { 
     .container {
         display: flex;
-        width: 600px;
-        height: 450px;
+        width: 37.5rem;
+        height: 28.125rem;
         
     }
 
@@ -136,28 +136,28 @@ button:hover {
 
     .description {
         overflow: hidden;
-        padding: 32px;
+        padding: 2rem;
         margin: 0;
     }
 
     .header {
-        margin-bottom: 20px;
+        margin-bottom: 1.25rem;
     }
 
     h1 {
-        margin-bottom: 24px;
-        margin-right: 30px;
+        margin-bottom: 1.5rem;
+        margin-right: 1.875rem;
     }
 
     .product-description {
-        margin-bottom: 29px;
+        margin-bottom: 1.8125rem;
     }
 
     .prices {
-        margin-bottom: 30px;
+        margin-bottom: 1.875rem;
     }
 
     button {
-        width: 236px;
+        width: 14.75rem;
     }
 }
